--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,8 @@
 <% @restaurants.each do |restaurant| %>
   <li>
     <%= link_to restaurant.name, restaurant_path(restaurant) %>
+
   </li>
 <% end %>
+<%= link_to "add new restaurant", new_restaurant_path %>
 
